--- a/js/index.html
+++ b/js/index.html
@@ -8,6 +8,8 @@
   <script src="base_game.js"></script>
   <script src="space_asteroids.js"></script>
   <script src="rocket.js"></script>
+  <script src="laser.js"></script>
+  <script src="asteroid.js"></script>
   <script src="volume_bar.js"></script>
   <script src="game.js"></script>
 </body>
