--- a/js/index.html
+++ b/js/index.html
@@ -11,6 +11,7 @@
   <script src="laser.js"></script>
   <script src="asteroid.js"></script>
   <script src="volume_bar.js"></script>
+  <script src="help.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
