--- a/js/index.html
+++ b/js/index.html
@@ -12,6 +12,7 @@
   <script src="asteroid.js"></script>
   <script src="volume_bar.js"></script>
   <script src="help.js"></script>
+  <script src="game_over.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
