--- a/js/index.html
+++ b/js/index.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+  <meta charset=utf-8>
+</head>
 <body>
   <canvas></canvas>
   <script src="geometrics.js"></script>
