--- a/js/index.html
+++ b/js/index.html
@@ -3,18 +3,8 @@
   <meta charset=utf-8>
 </head>
 <body>
-  <canvas></canvas>
-  <script src="geometrics.js"></script>
-  <script src="draw.js"></script>
-  <script src="base_move.js"></script>
-  <script src="base_game.js"></script>
-  <script src="space_asteroids.js"></script>
-  <script src="rocket.js"></script>
-  <script src="laser.js"></script>
-  <script src="asteroid.js"></script>
-  <script src="volume_bar.js"></script>
-  <script src="help.js"></script>
-  <script src="game_over.js"></script>
-  <script src="game.js"></script>
+  <a href="asteroids.html?w=1200&h=800&lives=5"> ASTEROIDS </a> <br><br><br>
+  <a href="snake.html?w=1200&h=800&lives=20"> SNAKE </a> <br><br><br>
+  <a href="lander.html?w=1200&h=800&lives=10&players=1"> ROCKET LANDER </a> <br><br><br>
 </body>
 </html>
