--- a/js/index.html
+++ b/js/index.html
@@ -6,6 +6,6 @@
   <a href="asteroids.html?w=1200&h=800&lives=5"> ASTEROIDS </a> <br><br><br>
   <a href="snake.html?w=1200&h=800&lives=20"> SNAKE </a> <br><br><br>
   <a href="lander.html?w=1200&h=800&lives=10&players=1"> ROCKET LANDER </a> <br><br><br>
-  <a href="popcorn.html?w=1200&h=800&lives=10"> POPCORN </a> <br><br><br>
+  <a href="popcorn.html?w=1200&h=800&lives=10&balls=5"> POPCORN </a> <br><br><br>
 </body>
 </html>
