--- a/js/index.html
+++ b/js/index.html
@@ -3,9 +3,11 @@
   <meta charset=utf-8>
 </head>
 <body>
-  <a href="asteroids.html?w=1200&h=800&lives=5"> ASTEROIDS </a> <br><br><br>
-  <a href="snake.html?w=1200&h=800&lives=20"> SNAKE </a> <br><br><br>
-  <a href="lander.html?w=1200&h=800&lives=10&players=1"> ROCKET LANDER </a> <br><br><br>
-  <a href="popcorn.html?w=1200&h=800&lives=10&balls=5"> POPCORN </a> <br><br><br>
+  <canvas></canvas>
+  <script src="geometrics.js"></script>
+  <script src="draw.js"></script>
+  <script src="base_game.js"></script>
+  <script src="button.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
