--- a/js/asteroids.html
+++ b/js/asteroids.html
@@ -6,6 +6,7 @@
   <canvas></canvas>
   <script src="geometrics.js"></script>
   <script src="draw.js"></script>
+  <script src="button.js"></script>
   <script src="base_move.js"></script>
   <script src="base_game.js"></script>
   <script src="rocket.js"></script>
