Bonus weapons added
Still not collectable, just flying with random v and angle.

--- a/js/asteroids.html
+++ b/js/asteroids.html
@@ -13,6 +13,7 @@
   <script src="laser.js"></script>
   <script src="asteroid.js"></script>
   <script src="volume_bar.js"></script>
+  <script src="bonus.js"></script>
   <script src="help.js"></script>
   <script src="game_over.js"></script>
   <script src="space_asteroids.js"></script>
