--- a/js/lander.html
+++ b/js/lander.html
@@ -13,6 +13,8 @@
   <script src="laser.js"></script>
   <script src="asteroid.js"></script>
   <script src="volume_bar.js"></script>
+  <script src="bonus.js"></script>
+  <script src="danger_ball.js"></script>
   <script src="help.js"></script>
   <script src="game_over.js"></script>
   <script src="lander_game.js"></script>
