--- a/js/algo/show.html
+++ b/js/algo/show.html
@@ -8,6 +8,7 @@
   <script src="../draw.js"></script>
   <script src="../button.js"></script>
   <script src="../base_game.js"></script>
+  <script src="../base_move.js"></script>
   <script src="../volume_bar.js"></script>
   <script src="../help.js"></script>
   <script src="../game_over.js"></script>
