--- a/js/snake.html
+++ b/js/snake.html
@@ -12,7 +12,7 @@
   <script src="volume_bar.js"></script>
   <script src="help.js"></script>
   <script src="game_over.js"></script>
-  <script src="snake.js"></script>
-  <script src="snake_game.js"></script>
+  <script src="snake/snake.js"></script>
+  <script src="snake/snake_game.js"></script>
 </body>
 </html>
