3D simple draw contour added

--- a/js/3d/index.html
+++ b/js/3d/index.html
@@ -28,6 +28,7 @@
       document.getElementsByTagName('canvas')[0],
       params.get("w") || 1200,
       params.get("h") || 800,
+      params.get("n") || 3,
     ).run()
 
   </script>
