--- a/js/3d/index.html
+++ b/js/3d/index.html
@@ -29,6 +29,7 @@
       params.get("w") || 1200,
       params.get("h") || 800,
       params.get("n") || 3,
+      params.get("g") || 0.03,
     ).run()
 
   </script>
